--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
 		<style>
 			.image-centered img {
 				display: block;
@@ -48,20 +49,16 @@
 					</div>
 
 					<p>
-						Hi! I’m <strong>Jaswanth Veeragantla</strong>, a passionate <strong>Data Analyst | Data Engineer | Machine Learning Practitioner</strong> 
-						with a Master’s degree in Information Science. I specialize in building <strong>data-driven solutions</strong> that transform raw information 
-						into actionable insights. My experience spans developing <strong>ETL pipelines</strong>, creating analytical dashboards, and applying 
-						<strong>machine learning models</strong> to optimize business outcomes. <br><br>
-						I’m currently seeking <strong>full-time roles in Data Analytics, Data Engineering, or Machine Learning</strong>, where I can apply my 
-						technical expertise in <strong>Java, Python, SQL, Power BI, AWS, and Azure</strong> to help organizations make smarter decisions. 
-						I love working on end-to-end data workflows that turn complex data into clear stories.
-					</p>
+	Hi! I’m <strong>Jaswanth Veeragantla</strong>, results-driven <strong>Software Developer, Data Analyst, and Machine Learning Practitioner</strong> 
+	with a Master’s degree in Information Science. I specialize in designing and implementing <strong>data-driven solutions</strong> that convert complex datasets 
+	into actionable insights and intelligent systems. My expertise spans <strong>ETL pipeline development, data engineering, dashboard automation,</strong> and 
+	<strong>AI model deployment</strong> across cloud platforms.
+	<br><br>
+	Currently, I’m working as a <strong>Software Developer </strong>, where I build and optimize scalable backend and data processing systems. 
+	I’m passionate about leveraging technologies like <strong>Python, Java, SQL, Power BI, AWS, and Azure</strong> to enable smarter, data-informed decision-making. 
+	I thrive on solving complex problems, automating workflows, and transforming raw data into clear, strategic insights that drive innovation and business impact.
+</p>
 
-					<footer>
-						<ul class="actions">
-							<li><a href="resume.pdf" class="button large">Download Resume</a></li>
-						</ul>
-					</footer>
 				</article>
 
 				<!-- Work Experience -->
@@ -77,23 +74,33 @@
 						<img src="images/experience.jpg.jpeg" alt="Work Experience" />
 					</div>
 
+					<!-- Software Developer Experience -->
 					<p>
-						I have hands-on experience in both <strong>Data Analytics</strong> and <strong>Machine Learning</strong>, 
-						applying data-driven insights to real-world business problems. During my experience at 
-						<strong>Gogaga Holidays</strong> (2021–2023), I worked as a <strong>Data Analyst</strong> 
-						where I analyzed customer booking data, automated dashboards, and developed 
-						forecasting models to improve marketing performance and reporting efficiency. 
-						I collaborated closely with cross-functional teams to deliver clear, actionable insights 
-						that guided pricing and campaign decisions.
+						<strong>Software Developer | Binary AI Gen LLC (July 2025 – Present):</strong><br>
+						• Developed and deployed scalable backend services which reduced model inference latency by 35% using FastAPI and asynchronous APIs.<br>
+						• Automated data ingestion workflows, cutting manual data prep time by 50% by integrating AWS Lambda and S3 triggers for real-time processing.<br>
+						• Built RESTful APIs that improved integration across teams by 40% through structured API design and containerized deployments using Docker.<br>
+						• Enhanced model accuracy by 12% by retraining and tuning machine learning models with XGBoost and feedback loops.<br>
+						• Collaborated with cross-functional AI teams, improving CI/CD cycle time by 25% using GitHub Actions and AWS ECS.
 					</p>
 
+					<!-- Data Analyst Experience -->
 					<p>
-						Later, as a <strong>Machine Learning & Data Analysis Intern</strong> through 
-						<strong>Kaggle Competitions</strong> (2023), I built predictive models using 
-						<strong>XGBoost, Random Forest, and Python</strong> to identify customer churn patterns. 
-						I performed data preprocessing, feature engineering, and model tuning to deliver 
-						accurate, explainable predictions. This role strengthened my ability to connect 
-						machine learning outcomes with real-world business applications and decision-making.
+						<strong>Data Analyst | Gogaga Holidays (June 2021 – August 2023):</strong><br>
+						• Analyzed 100K+ booking records which increased seasonal package sales by 18% through trend forecasting in Python (Pandas, Matplotlib).<br>
+						• Built automated dashboards in Power BI and Tableau, reducing manual reporting time by 50%.<br>
+						• Created customer segmentation models that boosted marketing ROI by 22% through K-Means clustering.<br>
+						• Standardized ETL pipelines to improve reporting accuracy by 30% through schema validation and data cleansing scripts.<br>
+						• Conducted A/B testing on promotions, increasing click-through rates by 15%.
+					</p>
+
+					<!-- Machine Learning Intern -->
+					<p>
+						<strong>Machine Learning & Data Analysis Intern | Kaggle Competition (March 2023 – May 2023):</strong><br>
+						• Built machine learning models using XGBoost and Random Forest, improving prediction accuracy and consistency.<br>
+						• Performed feature engineering, scaling, and outlier handling for model stability.<br>
+						• Conducted exploratory data analysis with Python (Pandas, Seaborn) to uncover behavioral trends.<br>
+						• Tuned hyperparameters using GridSearchCV and visualized feature importance with SHAP values for stakeholder communication.
 					</p>
 				</article>
 
@@ -145,12 +152,15 @@
 					</header>
 
 					<p>
-						<strong>Languages:</strong> Python (Pandas, NumPy, Matplotlib), SQL, R, Java<br>
-						<strong>Visualization:</strong> Power BI, Tableau, Excel, QuickSight<br>
-						<strong>Databases & Cloud:</strong> MySQL, PostgreSQL, AWS (S3, Athena, Glue), Azure (Data Factory, Databricks)<br>
-						<strong>Machine Learning:</strong> Scikit-learn, TensorFlow, XGBoost<br>
-						<strong>Core Skills:</strong> ETL Design, Data Modeling, Forecasting, A/B Testing, Reporting Automation
-					</p>
+	<strong>Programming Languages:</strong> Python (Pandas, NumPy, Matplotlib), SQL, Java, R<br>
+	<strong>Data Engineering & Cloud:</strong> AWS (S3, Glue, Athena, Lambda, ECS), Azure (Data Factory, Databricks), Airflow<br>
+	<strong>Databases:</strong> MySQL, PostgreSQL, Snowflake<br>
+	<strong>Data Visualization:</strong> Power BI, Tableau, QuickSight, Excel<br>
+	<strong>Machine Learning & AI:</strong> Scikit-learn, TensorFlow, XGBoost, SHAP<br>
+	<strong>DevOps & Tools:</strong> Git, GitHub Actions, Docker, FastAPI, VS Code, PyCharm<br>
+	<strong>Core Competencies:</strong> ETL Design, Data Modeling, Data Pipeline Automation, API Development, CI/CD, A/B Testing, Forecasting, and Reporting Automation
+</p>
+
 				</section>
 
 				<!-- Hobbies Section -->
@@ -185,7 +195,7 @@
 					</header>
 
 					<p>
-						I’d love to connect with you about <strong>Data Analytics, Machine Learning, or Data Engineering</strong> opportunities.  
+						I’d love to connect with you about <strong>Software Developer ,Data Analytics, Machine Learning, or Data Engineering</strong> opportunities.  
 						Feel free to reach out anytime!
 					</p>
 
@@ -203,7 +213,7 @@
 				<section id="intro">
 					<header>
 						<h2>JASWANTH VEERAGANTLA</h2>
-						<p>Data Analyst | Cloud Data Engineer | ETL & Dashboard Development</p>
+						<p>Software Developer| Data Analyst | Cloud Data Engineer | ETL & Dashboard Development</p>
 					</header>
 				</section>
 			</section>
